removed unnecessary constructors, added validation, added mask for isbn validation, changed titles in tables, added counting on main-page

--- a/frontend/src/app/views/author/author.component.html
+++ b/frontend/src/app/views/author/author.component.html
@@ -20,9 +20,6 @@
             <mat-panel-title>
               Filter by:
             </mat-panel-title>
-            <mat-panel-description>
-              Parameters for filtering
-            </mat-panel-description>
           </mat-expansion-panel-header>
           <div>
             <form #filterForm="ngForm" (ngSubmit)="filterAuthors()">
@@ -60,9 +57,9 @@
             <div class="card-body table-responsive">
               <table class="table table-hover" aria-describedby="availableAuthors">
                 <thead class="text-warning">
-                <th id="checkBox">
-                  <input class="form-check-inline" type="checkbox" value="" id="checkAll">Mark all
-                </th>
+<!--                <th id="checkBox">-->
+<!--                  <input class="form-check-inline" type="checkbox" value="" id="checkAll">Mark all-->
+<!--                </th>-->
                 <th (click)="sortByColumn('firstName')" id="tableName">First Name
                   <em
                     *ngIf="pageSortFilterParameters.sortField === 'firstName' && !pageSortFilterParameters.reverseForSorting"
@@ -90,11 +87,11 @@
                 </thead>
                 <tbody>
                 <tr *ngFor="let author of authors">
-                  <td>
-                    <div class="form-check">
-                      <input class="form-check-inline" type="checkbox" value="" id="flexCheckDefault">
-                    </div>
-                  </td>
+<!--                  <td>-->
+<!--                    <div class="form-check">-->
+<!--                      <input class="form-check-inline" type="checkbox" value="" id="flexCheckDefault">-->
+<!--                    </div>-->
+<!--                  </td>-->
                   <td>{{author.firstName}}</td>
                   <td>{{author.secondName}}</td>
                   <td>{{author.rating}}</td>
@@ -130,15 +127,15 @@
         <button class="close" data-dismiss="modal">X</button>
       </div>
       <div class="modal-body">
-        <form #addForm="ngForm" (ngSubmit)="createAuthor(addForm)">
+        <form #addForm="ngForm" (ngSubmit)="createAuthor(addForm)" class="was-validated">
           <div class="form-group">
             <label for="authorName">Name</label>
-            <input type="text" ngModel name="firstName" minlength="2" maxlength="128"
+            <input type="text" ngModel name="firstName" minlength="1" maxlength="128"
                    class="form-control" id="authorName" placeholder="name" required>
           </div>
           <div class="form-group">
             <label for="authorSecondName">Second name</label>
-            <input type="text" ngModel name="secondName" minlength="2" maxlength="128"
+            <input type="text" ngModel name="secondName" minlength="1" maxlength="128"
                    class="form-control" id="authorSecondName" placeholder="second name" required>
           </div>
           <div class="modal-footer">
@@ -161,22 +158,22 @@
         <button class="close" data-dismiss="modal">X</button>
       </div>
       <div class="modal-body">
-        <form #editForm="ngForm">
+        <form #editForm="ngForm" class="was-validated">
           <div class="form-group">
             <label for="updateAuthorName">Name</label>
-            <input type="text" ngModel="{{editAuthor?.firstName}}" name="firstName" minlength="2" maxlength="128"
+            <input type="text" ngModel="{{editAuthor?.firstName}}" name="firstName" minlength="1" maxlength="128"
                    class="form-control"
                    id="updateAuthorName" placeholder="name" required>
           </div>
           <input type="hidden" ngModel="{{editAuthor?.id}}" name="id" class="form-control" id="id" placeholder="Email">
           <div class="form-group">
             <label for="updateAuthorSecondName">Second name</label>
-            <input type="text" ngModel="{{editAuthor?.secondName}}" name="secondName" minlength="2" maxlength="128"
+            <input type="text" ngModel="{{editAuthor?.secondName}}" name="secondName"  maxlength="128"
                    class="form-control"
-                   id="updateAuthorSecondName" placeholder="second name" required>
+                   id="updateAuthorSecondName" placeholder="second name">
           </div>
           <div class="modal-footer">
-            <button (click)="updateAuthor(editForm.value)" class="btn btn-success" data-dismiss="modal">Save changes
+            <button [disabled]="editForm.invalid" (click)="updateAuthor(editForm.value)" class="btn btn-success" data-dismiss="modal">Save changes
             </button>
             <button class="btn btn-danger" data-dismiss="modal">Close</button>
             <button (click)="deleteAuthor(editAuthor.id)" class="btn btn-danger" data-dismiss="modal">Delete</button>
@@ -217,10 +214,10 @@
       <div class="modal-body">
         <div>Name: {{detailAuthor?.firstName}}</div>
         <div>Second name: {{detailAuthor?.secondName}}</div>
-        <div>Books: <a *ngFor="let book of detailAuthor?.books">
-          {{book.name}}
-        </a>
-        </div>
+<!--        <div>Books: <a *ngFor="let book of detailAuthor?.books">-->
+<!--          {{book.name}}-->
+<!--        </a>-->
+<!--        </div>-->
       </div>
     </div>
   </div>
