--- a/frontend/src/app/views/main-page/main-page.component.html
+++ b/frontend/src/app/views/main-page/main-page.component.html
@@ -19,7 +19,7 @@
           <span class="material-icons">star_outline</span>
           <span class="material-icons">star_outline</span>
         </td>
-        <td>[count books by this rating]</td>
+        <td>{{oneStarBooks}}</td>
       </tr>
       <tr>
         <td>2 stars</td>
@@ -29,7 +29,7 @@
           <span class="material-icons">star_outline</span>
           <span class="material-icons">star_outline</span>
         </td>
-        <td>[count books by this rating]</td>
+        <td>{{twoStarBooks}}</td>
       </tr>
       <tr>
         <td>3 stars</td>
@@ -39,7 +39,7 @@
           <span class="material-icons">star_outline</span>
           <span class="material-icons">star_outline</span>
         </td>
-        <td>[count books by this rating]</td>
+        <td>{{threeStarBooks}}</td>
       </tr>
       <tr>
         <td>4 stars</td>
@@ -49,7 +49,7 @@
           <span class="material-icons">star</span>
           <span class="material-icons">star_outline</span>
         </td>
-        <td>[count books by this rating]</td>
+        <td>{{fourStarBooks}}</td>
       </tr>
       <tr>
         <td>5 stars</td>
@@ -59,7 +59,7 @@
           <span class="material-icons">star</span>
           <span class="material-icons">star</span>
         </td>
-        <td>[count books by this rating]</td>
+        <td>{{fiveStarBooks}}</td>
       </tr>
       </tbody>
     </table>
