--- a/frontend/src/assets/css/material-dashboard.css
+++ b/frontend/src/assets/css/material-dashboard.css
@@ -19793,6 +19793,9 @@ Copyright (c) 2015 Daniel Eden
       float: left;
     }
   }
+  mat-panel-title {
+    justify-content: center !important;
+  }
 }
 
 /*# sourceMappingURL=dashboard-free.css.map */
